mType/tests/testFiles/import/error/importMixedSyntax.mt
// Test: Mixed wildcard and selective import (invalid syntax)
import *, { SomeClass } from "./modules/SomeModule.mt"

var obj = SomeClass();
